--- a/style.css
+++ b/style.css
@@ -1414,6 +1414,7 @@ picture.jarallax-img img {
   -webkit-box-shadow: none;
   box-shadow: none;
   background-color: transparent;
+  top: 0px;
 }
 .header-area.style-three.sticky-on .navbar {
   -webkit-box-shadow: 0px 30px 42px 0px rgba(33, 39, 37, 0.1);
