--- a/custom.css
+++ b/custom.css
@@ -33,11 +33,11 @@
   margin-bottom: 20px !important;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li {
   margin: 0 !important;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li>a {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li > a {
   font-size: 14px !important;
   font-weight: 600 !important;
   text-transform: capitalize !important;
@@ -47,7 +47,7 @@
   position: relative;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li>a::before {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li > a::before {
   content: "";
   width: 20px;
   height: 20px;
@@ -60,7 +60,7 @@
   transition: all ease-in-out 0.3s;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active>a::before {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li.ui-tabs-active > a::before {
   border: 5px solid #3cb371;
 }
 
@@ -77,8 +77,8 @@
 
 .go_trip_form .chbs-form-field {
   padding-top: 0 !important;
-  border-right: 1px solid #76767680!important;
-  border-bottom: 0 solid #76767680!important;
+  border-right: 1px solid #76767680 !important;
+  border-bottom: 0 solid #76767680 !important;
 }
 
 .go_trip_form #panel-1 .chbs-form-field-transfer-type,
@@ -117,7 +117,7 @@
   color: rgb(255, 255, 255) !important;
 }
 
-.chbs-main .chbs-main-content>div>div:last-child {
+.chbs-main .chbs-main-content > div > div:last-child {
   margin-top: 20px !important;
 }
 
@@ -155,7 +155,13 @@
   margin-right: 12px;
 }
 
-.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-main-navigation-default>ul>li.chbs-state-selected>a>span:first-child {
+.go_trip_bookingform
+  .chbs-booking-form-id-10007
+  .chbs-main-navigation-default
+  > ul
+  > li.chbs-state-selected
+  > a
+  > span:first-child {
   background-color: #3cb371;
 }
 
@@ -167,12 +173,12 @@
   margin-bottom: 20px;
 }
 
-.go_trip_bookingform .chbs-main .chbs-tab.ui-tabs .ui-tabs-nav>li {
+.go_trip_bookingform .chbs-main .chbs-tab.ui-tabs .ui-tabs-nav > li {
   width: 50% !important;
   border-radius: 50px !important;
 }
 
-.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav>li a {
+.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav > li a {
   background-color: transparent !important;
   border: none !important;
   border-radius: 50px !important;
@@ -180,16 +186,25 @@
   font-weight: 700 !important;
 }
 
-.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active>a {
+.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav > li.ui-tabs-active > a {
   background-color: #3cb371 !important;
   border-color: #3cb371 !important;
 }
 
-.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active+li>a {
+.go_trip_bookingform
+  .chbs-booking-form-id-10007
+  .chbs-tab.ui-tabs
+  .ui-tabs-nav
+  > li.ui-tabs-active
+  + li
+  > a {
   border: none !important;
 }
 
-.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-tab.ui-tabs .ui-tabs-panel {
+.go_trip_bookingform
+  .chbs-booking-form-id-10007
+  .chbs-tab.ui-tabs
+  .ui-tabs-panel {
   border: none !important;
 }
 
@@ -210,7 +225,7 @@
   border: none;
 }
 
-.go_trip_bookingform .chbs-main .chbs-form-field>label {
+.go_trip_bookingform .chbs-main .chbs-form-field > label {
   color: #161920;
   font-size: 14px;
   font-weight: 600;
@@ -260,8 +275,8 @@
   }
 
   .go_trip_form .chbs-form-field {
-    border-right: 0px solid #76767680!important;
-    border-bottom: 1px solid #76767680!important;
+    border-right: 0px solid #76767680 !important;
+    border-bottom: 1px solid #76767680 !important;
   }
 
   .go_trip_form #panel-1 .chbs-form-field-transfer-type,
@@ -277,7 +292,11 @@
     padding-bottom: 15px !important;
   }
 
-  .go_trip_form .chbs-main.chbs-widget.chbs-widget-style-4 .chbs-main-content-step-1>div+div {
+  .go_trip_form
+    .chbs-main.chbs-widget.chbs-widget-style-4
+    .chbs-main-content-step-1
+    > div
+    + div {
     text-align: left !important;
   }
 
@@ -337,11 +356,15 @@
 
 .go_trip_Customform .jet-form-builder__field.jet-form-builder-repeater,
 .go_trip_Customform .jet-form-builder-repeater__row,
-.go_trip_Customform .jet-form-builder-repeater__row-fields .jet-form-builder-row {
+.go_trip_Customform
+  .jet-form-builder-repeater__row-fields
+  .jet-form-builder-row {
   padding: 0;
 }
 
-.go_trip_Customform .jet-form-builder-repeater__row-fields :where(.wp-block-columns) {
+.go_trip_Customform
+  .jet-form-builder-repeater__row-fields
+  :where(.wp-block-columns) {
   margin-bottom: 0;
 }
 
@@ -701,6 +724,11 @@
   color: #767676;
 }
 
-.post b, .post strong{
+.post b,
+.post strong {
   color: #161920;
+}
+
+.footer-card .footer-contact-card p a {
+  color: #ffffff;
 }
