--- a/custom.css
+++ b/custom.css
@@ -742,21 +742,25 @@
 }
 
 .booking_sidebar .card {
-
   border-radius: 10px;
   background-color: #f7f7f7;
   border-radius: 18px;
 }
-.footer_pickup { background: white; padding: 10px; font-size: 14px; border-top: 1px solid #dee2e6;}
-
+.footer_pickup {
+  background: white;
+  padding: 10px;
+  font-size: 14px;
+  border-top: 1px solid #dee2e6;
+}
 
 .sticky-sidebar {
-  z-index: 1000; /* Ensure it stays above other content */
+  z-index: 1000;
+  overflow: hidden;
 }
 .sticky-sidebar.stuck {
   position: fixed;
   top: 0;
-  width: inherit; /* Maintain column width */
+  
 }
 .sticky-spacer {
   display: none;
