--- a/style.css
+++ b/style.css
@@ -644,9 +644,20 @@ textarea:invalid {
   display: block;
   height: 50px;
 }
+
+.divider-xs {
+  width: 100%;
+  display: block;
+  height: 20px;
+}
+
 @media only screen and (min-width: 768px) {
   .divider-sm {
     height: 60px;
+  }
+
+  .divider-xs {
+    height: 20px;
   }
 }
 
@@ -4753,11 +4764,9 @@ picture.jarallax-img img {
   -ms-flex-align: center;
   align-items: center;
   gap: 10px;
- 
 }
 @media only screen and (min-width: 992px) {
   .deals-navigation-container {
-   
   }
 }
 .deals-navigation-container .deals-button-prev,
