--- a/custom.css
+++ b/custom.css
@@ -33,11 +33,11 @@
   margin-bottom: 20px !important;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li {
   margin: 0 !important;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li > a {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li>a {
   font-size: 14px !important;
   font-weight: 600 !important;
   text-transform: capitalize !important;
@@ -47,7 +47,7 @@
   position: relative;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li > a::before {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li>a::before {
   content: "";
   width: 20px;
   height: 20px;
@@ -60,7 +60,7 @@
   transition: all ease-in-out 0.3s;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li.ui-tabs-active > a::before {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active>a::before {
   border: 5px solid #3cb371;
 }
 
@@ -117,7 +117,7 @@
   color: rgb(255, 255, 255) !important;
 }
 
-.chbs-main .chbs-main-content > div > div:last-child {
+.chbs-main .chbs-main-content>div>div:last-child {
   margin-top: 20px !important;
 }
 
@@ -155,13 +155,7 @@
   margin-right: 12px;
 }
 
-.go_trip_bookingform
-  .chbs-booking-form-id-10007
-  .chbs-main-navigation-default
-  > ul
-  > li.chbs-state-selected
-  > a
-  > span:first-child {
+.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-main-navigation-default>ul>li.chbs-state-selected>a>span:first-child {
   background-color: #3cb371;
 }
 
@@ -173,12 +167,12 @@
   margin-bottom: 20px;
 }
 
-.go_trip_bookingform .chbs-main .chbs-tab.ui-tabs .ui-tabs-nav > li {
+.go_trip_bookingform .chbs-main .chbs-tab.ui-tabs .ui-tabs-nav>li {
   width: 50% !important;
   border-radius: 50px !important;
 }
 
-.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav > li a {
+.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav>li a {
   background-color: transparent !important;
   border: none !important;
   border-radius: 50px !important;
@@ -186,25 +180,16 @@
   font-weight: 700 !important;
 }
 
-.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav > li.ui-tabs-active > a {
+.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active>a {
   background-color: #3cb371 !important;
   border-color: #3cb371 !important;
 }
 
-.go_trip_bookingform
-  .chbs-booking-form-id-10007
-  .chbs-tab.ui-tabs
-  .ui-tabs-nav
-  > li.ui-tabs-active
-  + li
-  > a {
+.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active+li>a {
   border: none !important;
 }
 
-.go_trip_bookingform
-  .chbs-booking-form-id-10007
-  .chbs-tab.ui-tabs
-  .ui-tabs-panel {
+.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-tab.ui-tabs .ui-tabs-panel {
   border: none !important;
 }
 
@@ -225,7 +210,7 @@
   border: none;
 }
 
-.go_trip_bookingform .chbs-main .chbs-form-field > label {
+.go_trip_bookingform .chbs-main .chbs-form-field>label {
   color: #161920;
   font-size: 14px;
   font-weight: 600;
@@ -292,11 +277,7 @@
     padding-bottom: 15px !important;
   }
 
-  .go_trip_form
-    .chbs-main.chbs-widget.chbs-widget-style-4
-    .chbs-main-content-step-1
-    > div
-    + div {
+  .go_trip_form .chbs-main.chbs-widget.chbs-widget-style-4 .chbs-main-content-step-1>div+div {
     text-align: left !important;
   }
 
@@ -356,15 +337,11 @@
 
 .go_trip_Customform .jet-form-builder__field.jet-form-builder-repeater,
 .go_trip_Customform .jet-form-builder-repeater__row,
-.go_trip_Customform
-  .jet-form-builder-repeater__row-fields
-  .jet-form-builder-row {
+.go_trip_Customform .jet-form-builder-repeater__row-fields .jet-form-builder-row {
   padding: 0;
 }
 
-.go_trip_Customform
-  .jet-form-builder-repeater__row-fields
-  :where(.wp-block-columns) {
+.go_trip_Customform .jet-form-builder-repeater__row-fields :where(.wp-block-columns) {
   margin-bottom: 0;
 }
 
@@ -724,8 +701,8 @@
   color: #767676;
 }
 
-.post b,
-.post strong {
+b,
+strong {
   color: #161920;
 }
 
@@ -736,7 +713,8 @@
 .sticky-sidebar {
   position: -webkit-sticky;
   position: sticky;
-  top: 20px; /* Adjust this value based on your navbar height */
+  top: 20px;
+  /* Adjust this value based on your navbar height */
   height: 100vh;
   overflow-y: auto;
 }
@@ -746,6 +724,7 @@
   background-color: #f7f7f7;
   border-radius: 18px;
 }
+
 .footer_pickup {
   background: white;
   padding: 10px;
@@ -757,15 +736,18 @@
   z-index: 1000;
   overflow: hidden;
 }
+
 .sticky-sidebar.stuck {
   position: fixed;
-  top: 0;
-  
+  top: 9%;
+
 }
+
 .sticky-spacer {
   display: none;
   height: 0;
 }
+
 .sticky-spacer.active {
   display: block;
 }
