--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ textarea:invalid {
 
 [class*="icon-"]:before {
   display: inline-block;
-  font-family: "Glyphter";
+  /* font-family: "Glyphter"; */
   font-style: normal;
   font-weight: normal;
   line-height: 1;
