--- a/custom.css
+++ b/custom.css
@@ -22,6 +22,11 @@
   font-family: "chbs-meta-icon" !important;
 } */
 
+
+[class*="icon-"] {
+  line-height: 0.6 ;
+}
+
 [class*="icon-"]:before {
   display: inline-block;
   font-family: "Glyphter";
@@ -39,6 +44,8 @@
   font-family: "chbs-meta-icon-2";
       line-height: 1;
 }
+
+
 
 .go_trip_form .ui-tabs-panel {
   border-radius: 100px !important;
