--- a/custom.css
+++ b/custom.css
@@ -24,25 +24,25 @@
 
 
 [class*="icon-"] {
-  line-height: 0.6 ;
+  line-height: 0.6;
 }
 
 [class*="icon-"]:before {
   display: inline-block;
   font-family: "Glyphter";
-    line-height: 1;
+  line-height: 1;
 }
 
 .chbs-main [class*="icon-"]:before {
   display: inline-block;
   font-family: "chbs-meta-icon";
-     line-height: 1;
+  line-height: 1;
 }
 
 .chbs-main .chbs-meta-icon-2::before {
   display: inline-block;
   font-family: "chbs-meta-icon-2";
-      line-height: 1;
+  line-height: 1;
 }
 
 
@@ -62,11 +62,11 @@
   margin-bottom: 20px !important;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li {
   margin: 0 !important;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li > a {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li>a {
   font-size: 14px !important;
   font-weight: 600 !important;
   text-transform: capitalize !important;
@@ -76,7 +76,7 @@
   position: relative;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li > a::before {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li>a::before {
   content: "";
   width: 20px;
   height: 20px;
@@ -89,7 +89,7 @@
   transition: all ease-in-out 0.3s;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li.ui-tabs-active > a::before {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active>a::before {
   border: 5px solid #3cb371;
 }
 
@@ -146,7 +146,7 @@
   color: rgb(255, 255, 255) !important;
 }
 
-.chbs-main .chbs-main-content > div > div:last-child {
+.chbs-main .chbs-main-content>div>div:last-child {
   margin-top: 20px !important;
 }
 
@@ -184,13 +184,7 @@
   margin-right: 12px;
 }
 
-.go_trip_bookingform
-  .chbs-booking-form-id-10007
-  .chbs-main-navigation-default
-  > ul
-  > li.chbs-state-selected
-  > a
-  > span:first-child {
+.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-main-navigation-default>ul>li.chbs-state-selected>a>span:first-child {
   background-color: #3cb371;
 }
 
@@ -202,12 +196,12 @@
   margin-bottom: 20px;
 }
 
-.go_trip_bookingform .chbs-main .chbs-tab.ui-tabs .ui-tabs-nav > li {
+.go_trip_bookingform .chbs-main .chbs-tab.ui-tabs .ui-tabs-nav>li {
   width: 50% !important;
   border-radius: 50px !important;
 }
 
-.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav > li a {
+.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav>li a {
   background-color: transparent !important;
   border: none !important;
   border-radius: 50px !important;
@@ -215,25 +209,16 @@
   font-weight: 700 !important;
 }
 
-.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav > li.ui-tabs-active > a {
+.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active>a {
   background-color: #3cb371 !important;
   border-color: #3cb371 !important;
 }
 
-.go_trip_bookingform
-  .chbs-booking-form-id-10007
-  .chbs-tab.ui-tabs
-  .ui-tabs-nav
-  > li.ui-tabs-active
-  + li
-  > a {
+.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active+li>a {
   border: none !important;
 }
 
-.go_trip_bookingform
-  .chbs-booking-form-id-10007
-  .chbs-tab.ui-tabs
-  .ui-tabs-panel {
+.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-tab.ui-tabs .ui-tabs-panel {
   border: none !important;
 }
 
@@ -254,7 +239,7 @@
   border: none;
 }
 
-.go_trip_bookingform .chbs-main .chbs-form-field > label {
+.go_trip_bookingform .chbs-main .chbs-form-field>label {
   color: #161920;
   font-size: 14px;
   font-weight: 600;
@@ -321,11 +306,7 @@
     padding-bottom: 15px !important;
   }
 
-  .go_trip_form
-    .chbs-main.chbs-widget.chbs-widget-style-4
-    .chbs-main-content-step-1
-    > div
-    + div {
+  .go_trip_form .chbs-main.chbs-widget.chbs-widget-style-4 .chbs-main-content-step-1>div+div {
     text-align: left !important;
   }
 
@@ -385,15 +366,11 @@
 
 .go_trip_Customform .jet-form-builder__field.jet-form-builder-repeater,
 .go_trip_Customform .jet-form-builder-repeater__row,
-.go_trip_Customform
-  .jet-form-builder-repeater__row-fields
-  .jet-form-builder-row {
+.go_trip_Customform .jet-form-builder-repeater__row-fields .jet-form-builder-row {
   padding: 0;
 }
 
-.go_trip_Customform
-  .jet-form-builder-repeater__row-fields
-  :where(.wp-block-columns) {
+.go_trip_Customform .jet-form-builder-repeater__row-fields :where(.wp-block-columns) {
   margin-bottom: 0;
 }
 
@@ -802,22 +779,33 @@ strong {
 .sticky-spacer.active {
   display: block;
 }
-.tour_banner .hero-search-form { max-width: 750px; margin: auto;}
+
+.tour_banner .hero-search-form {
+  max-width: 750px;
+  margin: auto;
+}
 
 
 @media screen and (max-width: 993px) {
   .sticky-sidebar.stuck {
-  position: static !important;
- 
-}
+    position: static !important;
+
+  }
+
+  .Single_tour_booking .tour_adults {
+    border-left: 0px solid #D6D6D6;
+  }
 
 }
 
 
 .destination-thumbs {
-  max-height: 450px; /* Adjust height */
-  overflow-y: auto;  /* Enable scrolling */
-  scrollbar-width: none; /* Firefox */
+  max-height: 450px;
+  /* Adjust height */
+  overflow-y: auto;
+  /* Enable scrolling */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 /* Hide scrollbar (WebKit browsers) */
@@ -836,4 +824,37 @@ strong {
   opacity: 1;
   border: 2px solid #0073e6;
   border-radius: 6px;
+}
+
+.Single_tour_booking .row,
+.book_ahead {
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid #D6D6D6;
+  border-radius: 10px;
+}
+
+.Single_tour_booking label {
+  color: #000;
+  font-weight: 700;
+}
+
+.Single_tour_booking .tour_date {
+  border-bottom: 1px solid #D6D6D6;
+
+}
+
+.Single_tour_booking .tour_adults {
+  border-bottom: 1px solid #D6D6D6;
+  border-left: 1px solid #D6D6D6;
+}
+
+.Single_tour_booking ul li,
+.book_ahead ul li {
+  font-size: 14px;
+}
+
+.Single_tour_booking ul li i {
+  font-size: 120%;
+  color: #3cb371;
 }
