--- a/custom.css
+++ b/custom.css
@@ -849,9 +849,17 @@ strong {
   border-left: 1px solid #D6D6D6;
 }
 
+.Single_tour_booking ul {
+  padding: .75rem .5rem .75rem 1rem;
+  background: #eafbf7;
+  border-radius: .5rem;
+}
+
 .Single_tour_booking ul li,
 .book_ahead ul li {
   font-size: 14px;
+  color: #161920;
+  font-weight: 500;
 }
 
 .Single_tour_booking ul li i {
@@ -949,22 +957,93 @@ strong {
   font-size: 30px !important;
   margin-right: 8px !important;
 }
+
+.tour-details-meta ul li,
+.tour-details-meta ul li a {
+  font-size: 14px;
+  font-weight: 500;
+}
+
 .destination-details-wrapper .wishlist {
   position: absolute;
   top: 10px;
   right: 0;
+  z-index: 999;
 }
-.destination-details-wrapper .wishlist li button.wishlist_btn i{
+
+.destination-details-wrapper .wishlist li button.wishlist_btn i {
   font-size: 24px;
 }
+
 .destination-details-wrapper .wishlist li button.wishlist_btn {
   width: auto;
-  height: 2.5rem;
+  line-height: 1.5;
   border: .0625rem solid #D6D6D6;
   border-radius: 1.875rem;
   padding: .5rem .75rem .5rem .25rem;
   display: flex;
+  gap: 5px;
   font-size: 14px;
   font-weight: 600;
   background-color: #ffffff;
+}
+
+.destination-details-wrapper .wishlist li ul.share_links {
+  display: none;
+  position: absolute;
+  top: 54px;
+  background-color: #ffffff;
+  padding: 1rem;
+  border-radius: .75rem;
+  border: .0625rem solid #D6D6D6;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, .2);
+  width: 224px;
+  z-index: 999;
+}
+
+.destination-details-wrapper .wishlist li ul.share_links.active {
+  display: block;
+}
+
+.destination-details-wrapper .wishlist li ul.share_links li a i {
+  font-size: 20px;
+}
+
+.destination-details-wrapper .wishlist li ul.share_links li a {
+  display: flex;
+  gap: 5px;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 8px;
+  color: #161920;
+  align-items: center;
+}
+
+.destination-details-wrapper .wishlist li ul.share_links li a:hover {
+  background-color: #f5f5f5;
+}
+
+.list-disc{
+  list-style-position: inside;
+  list-style-type: disc !important;
+}
+.tour_additional_list .tour_additional_box {
+  border: 1px solid #D6D6D6;
+  border-radius: 16px;
+  padding: 16px;
+}
+.tour_additional_list .tour_additional_box button{
+   width: auto;
+  line-height: 1.5;
+  border: 1.5px solid #000;
+  border-radius: 8px;
+  padding: .5625rem 1rem;
+  display: flex;
+  gap: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  background-color: #ffffff;
+}
+.tour_additional_list .tour_additional_box button:hover{
+  background-color: #f5f5f5;
 }
