--- a/custom.css
+++ b/custom.css
@@ -1023,17 +1023,19 @@ strong {
   background-color: #f5f5f5;
 }
 
-.list-disc{
+.list-disc {
   list-style-position: inside;
   list-style-type: disc !important;
 }
+
 .tour_additional_list .tour_additional_box {
   border: 1px solid #D6D6D6;
   border-radius: 16px;
   padding: 16px;
 }
-.tour_additional_list .tour_additional_box button{
-   width: auto;
+
+.tour_additional_list .tour_additional_box button {
+  width: auto;
   line-height: 1.5;
   border: 1.5px solid #000;
   border-radius: 8px;
@@ -1044,6 +1046,52 @@ strong {
   font-weight: 600;
   background-color: #ffffff;
 }
-.tour_additional_list .tour_additional_box button:hover{
+
+.tour_additional_list .tour_additional_box button:hover {
   background-color: #f5f5f5;
+}
+
+.pop_up_wrapper {
+  display: none;
+  position: fixed;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  overflow-y: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9000;
+  padding: 1.5rem 1rem;
+  background-color: rgba(0, 0, 0, .5)
+}
+
+.pop_up_wrapper.active {
+  display: flex;
+  /* show when active */
+}
+
+.pop_up_wrapper .cancellation_pop_up button.close_popup {
+  width: 32px;
+  height: 32px;
+  background-color: rgb(245, 245, 245);
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+}
+
+.pop_up_wrapper .cancellation_pop_up button.close_popup:hover {
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.25));
+}
+
+.cancellation_pop_up {
+  position: relative;
+  border-radius: 8px;
+  background-color: #ffffff;
+  padding: 1.5rem 2rem;
+  width: 80%;
+  min-width: auto;
+  max-width: 50rem;
+  z-index: 20;
 }
