--- a/custom.css
+++ b/custom.css
@@ -318,25 +318,29 @@
   .mtn {
     margin-top: 60px !important;
   }
-  .cancellation_pop_up {
-  width: 95%;
-  padding: 1.5rem 1rem;
-}
-.swiper.destination-details-wrapper .swiper-slide img {
-  height: 350px !important;
-}
-.tour-filters{
-  grid-template-columns: repeat(1, 1fr)!important;
-}
-.filter_card {
-  border-right: 0px solid #ccc!important; 
-  border-bottom: 1px solid #ccc !important; 
-}
 
-.filter_card:nth-child(even) {
-  border-right: none;
-  border-bottom: 0px solid #ccc; 
-}
+  .cancellation_pop_up {
+    width: 95%;
+    padding: 1.5rem 1rem;
+  }
+
+  .swiper.destination-details-wrapper .swiper-slide img {
+    height: 350px !important;
+  }
+
+  .tour-filters {
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
+
+  .filter_card {
+    border-right: 0px solid #ccc !important;
+    border-bottom: 1px solid #ccc !important;
+  }
+
+  .filter_card:nth-child(even) {
+    border-right: none;
+    border-bottom: 0px solid #ccc;
+  }
 }
 
 /*Plugin Setting*/
@@ -835,7 +839,7 @@ strong {
 /* .destination-thumbs .thumb-item */
 
 .destination-thumbs .swiper-slide {
-   opacity: 0.6;
+  opacity: 0.6;
   cursor: pointer;
   border: 2px solid transparent;
   transition: all 0.3s ease;
@@ -844,7 +848,7 @@ strong {
 
 /* Active thumb highlight */
 .destination-thumbs .swiper-slide.active-thumb {
- opacity: 1;
+  opacity: 1;
   border: 2px solid #0073e6;
   border-radius: 6px;
 }
@@ -867,6 +871,7 @@ strong {
   border-bottom: 1px solid #D6D6D6;
 
 }
+
 .Single_tour_booking .tour_time {
   border-top: 1px solid #D6D6D6;
 
@@ -923,12 +928,15 @@ strong {
   border-bottom: 1px solid #D6D6D6;
   padding: 48px 0;
 }
-.tour_included ul li{
+
+.tour_included ul li {
   line-height: normal;
 }
-.tour_included ul li i{
+
+.tour_included ul li i {
   font-size: 120%;
 }
+
 .tour_reviews .review_box {
   border: 1px solid #D6D6D6;
   border-radius: 16px;
@@ -1129,12 +1137,17 @@ strong {
 }
 
 .wishlist_btn.added {
-  
-    color: #3cb371;
+
+  color: #3cb371;
 }
 
-.step { display: none; }
-.step.active { display: block; }
+.step {
+  display: none;
+}
+
+.step.active {
+  display: block;
+}
 
 /* Stepper styles */
 .stepper-wrapper {
@@ -1170,13 +1183,15 @@ strong {
 .stepper-item::after {
   content: "";
   position: absolute;
-  top: 20px; /* vertically center with circle */
+  top: 20px;
+  /* vertically center with circle */
   left: 50%;
   width: 100%;
   height: 4px;
   background-color: #dee2e6;
   z-index: 1;
 }
+
 /* Line after a completed step turns green */
 .stepper-item.completed::after {
   background-color: #000;
@@ -1186,8 +1201,10 @@ strong {
 .stepper-item.active::after {
   background-color: #198754;
 }
+
 .stepper-item:last-child::after {
-  display: none; /* no line after last */
+  display: none;
+  /* no line after last */
 }
 
 /* Active & Completed States */
@@ -1216,28 +1233,73 @@ strong {
   color: #000;
 }
 
-.filter_bar{
+.filter_bar {
   background-color: #f7f7f7;
-      border: 1px solid rgba(247, 247, 247, 0.1);
+  border: 1px solid rgba(247, 247, 247, 0.1);
 }
 
-.filter_bar .btn{
+.filter_bar .btn {
   font-size: 14px;
   height: 36px;
   padding: 10px 20px;
 }
 
-.tour-filters{
+.tour-filters {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* 3 equal columns */
+  grid-template-columns: repeat(2, 1fr);
+  /* 3 equal columns */
   gap: 20px;
 }
+
 .filter_card {
   padding: 10px;
   border-right: 1px solid #ccc;
-  border-bottom: 0px solid #ccc !important;  
+  border-bottom: 0px solid #ccc !important;
 }
 
 .filter_card:nth-child(even) {
-  border-right: none; /* last item pe line nahi hogi */
+  border-right: none;
+  /* last item pe line nahi hogi */
+}
+
+.trip-box .wishlist {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  z-index: 999;
+  width: 100%;
+
+}
+
+.trip-box .wishlist li button.wishlist_btn i {
+  font-size: 24px;
+}
+
+.trip-box .wishlist li button.wishlist_btn {
+  width: auto;
+  line-height: 1.5;
+  border: .0625rem solid #D6D6D6;
+  border-radius: 1.875rem;
+  padding: .5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 600;
+  background-color: #ffffff;
+}
+
+.trip-box .wishlist li .badge {
+  padding: 8px 14px;
+  color: #ffffff;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 20rem;
+}
+
+.trip-box .trip-body p, .trip-box .trip-body ul li {
+  font-size: 12px;
+  color: #161920;
+  font-weight: 500;
 }
