--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ textarea:invalid {
 .container-sm,
 .container-xl,
 .container-xxl {
-  max-width: 320px;
+  max-width: 96%;
 }
 
 @media (min-width: 400px) {
@@ -122,7 +122,7 @@ textarea:invalid {
   .container-sm,
   .container-xl,
   .container-xxl {
-    max-width: 360px;
+    max-width: 96%;
   }
 }
 
@@ -134,7 +134,7 @@ textarea:invalid {
   .container-sm,
   .container-xl,
   .container-xxl {
-    max-width: 420px;
+    max-width: 96%;
   }
 }
 
@@ -146,7 +146,7 @@ textarea:invalid {
   .container-sm,
   .container-xl,
   .container-xxl {
-    max-width: 540px;
+    max-width: 96%;
   }
 }
 
@@ -158,7 +158,7 @@ textarea:invalid {
   .container-sm,
   .container-xl,
   .container-xxl {
-    max-width: 720px;
+    max-width: 96%;
   }
 }
 
@@ -170,7 +170,7 @@ textarea:invalid {
   .container-sm,
   .container-xl,
   .container-xxl {
-    max-width: 960px;
+    max-width: 96%;
   }
 }
 
@@ -182,7 +182,7 @@ textarea:invalid {
   .container-sm,
   .container-xl,
   .container-xxl {
-    max-width: 1308px;
+    max-width: 96%;
   }
 }
 
