--- a/custom.css
+++ b/custom.css
@@ -1060,7 +1060,7 @@ strong {
   padding: 16px;
 }
 
-.tour_additional_list .tour_additional_box button {
+.tour_additional_list .tour_additional_box button, .tour_additional button  {
   width: auto;
   line-height: 1.5;
   border: 1.5px solid #000;
@@ -1073,7 +1073,7 @@ strong {
   background-color: #ffffff;
 }
 
-.tour_additional_list .tour_additional_box button:hover {
+.tour_additional_list .tour_additional_box button:hover, .tour_additional button:hover {
   background-color: #f5f5f5;
 }
 
@@ -1304,4 +1304,12 @@ strong {
 }
 .jet-form-builder__field-wrap.checkradio-wrap span{
   flex-wrap: wrap;
+}
+
+.accordion-button:focus{
+  box-shadow: none;
+}
+.accordion-button:not(.collapsed){
+    background-color: #f7f7f7;
+    color: #161920;
 }
