--- a/custom.css
+++ b/custom.css
@@ -1298,7 +1298,8 @@ strong {
 }
 
 .trip-box .tour_feature {
-  max-height: 230px !important;
+  max-height: 200px !important;
+  min-height: 200px !important;
   object-fit: cover;
   border-radius: 12px;
 }
