--- a/custom.css
+++ b/custom.css
@@ -59,11 +59,11 @@
   margin-bottom: 20px !important;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li {
   margin: 0 !important;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li > a {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li>a {
   font-size: 14px !important;
   font-weight: 600 !important;
   text-transform: capitalize !important;
@@ -73,7 +73,7 @@
   position: relative;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li > a::before {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li>a::before {
   content: "";
   width: 20px;
   height: 20px;
@@ -86,7 +86,7 @@
   transition: all ease-in-out 0.3s;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li.ui-tabs-active > a::before {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active>a::before {
   border: 5px solid #3cb371;
 }
 
@@ -143,7 +143,7 @@
   color: rgb(255, 255, 255) !important;
 }
 
-.chbs-main .chbs-main-content > div > div:last-child {
+.chbs-main .chbs-main-content>div>div:last-child {
   margin-top: 20px !important;
 }
 
@@ -181,13 +181,7 @@
   margin-right: 12px;
 }
 
-.go_trip_bookingform
-  .chbs-booking-form-id-10007
-  .chbs-main-navigation-default
-  > ul
-  > li.chbs-state-selected
-  > a
-  > span:first-child {
+.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-main-navigation-default>ul>li.chbs-state-selected>a>span:first-child {
   background-color: #3cb371;
 }
 
@@ -199,12 +193,12 @@
   margin-bottom: 20px;
 }
 
-.go_trip_bookingform .chbs-main .chbs-tab.ui-tabs .ui-tabs-nav > li {
+.go_trip_bookingform .chbs-main .chbs-tab.ui-tabs .ui-tabs-nav>li {
   width: 50% !important;
   border-radius: 50px !important;
 }
 
-.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav > li a {
+.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav>li a {
   background-color: transparent !important;
   border: none !important;
   border-radius: 50px !important;
@@ -212,25 +206,16 @@
   font-weight: 700 !important;
 }
 
-.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav > li.ui-tabs-active > a {
+.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active>a {
   background-color: #3cb371 !important;
   border-color: #3cb371 !important;
 }
 
-.go_trip_bookingform
-  .chbs-booking-form-id-10007
-  .chbs-tab.ui-tabs
-  .ui-tabs-nav
-  > li.ui-tabs-active
-  + li
-  > a {
+.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active+li>a {
   border: none !important;
 }
 
-.go_trip_bookingform
-  .chbs-booking-form-id-10007
-  .chbs-tab.ui-tabs
-  .ui-tabs-panel {
+.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-tab.ui-tabs .ui-tabs-panel {
   border: none !important;
 }
 
@@ -251,7 +236,7 @@
   border: none;
 }
 
-.go_trip_bookingform .chbs-main .chbs-form-field > label {
+.go_trip_bookingform .chbs-main .chbs-form-field>label {
   color: #161920;
   font-size: 14px;
   font-weight: 600;
@@ -318,11 +303,7 @@
     padding-bottom: 15px !important;
   }
 
-  .go_trip_form
-    .chbs-main.chbs-widget.chbs-widget-style-4
-    .chbs-main-content-step-1
-    > div
-    + div {
+  .go_trip_form .chbs-main.chbs-widget.chbs-widget-style-4 .chbs-main-content-step-1>div+div {
     text-align: left !important;
   }
 
@@ -342,6 +323,10 @@
 
   .swiper.destination-details-wrapper .swiper-slide img {
     height: 350px !important;
+  }
+
+  .meta_info ul li {
+    font-size: 12px !important;
   }
 }
 
@@ -391,15 +376,11 @@
 
 .go_trip_Customform .jet-form-builder__field.jet-form-builder-repeater,
 .go_trip_Customform .jet-form-builder-repeater__row,
-.go_trip_Customform
-  .jet-form-builder-repeater__row-fields
-  .jet-form-builder-row {
+.go_trip_Customform .jet-form-builder-repeater__row-fields .jet-form-builder-row {
   padding: 0;
 }
 
-.go_trip_Customform
-  .jet-form-builder-repeater__row-fields
-  :where(.wp-block-columns) {
+.go_trip_Customform .jet-form-builder-repeater__row-fields :where(.wp-block-columns) {
   margin-bottom: 0;
 }
 
@@ -1317,6 +1298,7 @@ strong {
   object-fit: cover;
   border-radius: 12px;
 }
+
 .jet-form-builder__field-wrap.checkradio-wrap span {
   flex-wrap: wrap;
 }
@@ -1324,6 +1306,7 @@ strong {
 .accordion-button:focus {
   box-shadow: none;
 }
+
 .accordion-button:not(.collapsed) {
   background-color: #f7f7f7;
   color: #161920;
@@ -1467,3 +1450,18 @@ strong {
 }
 
 /* End Single Tour*/
+.review_list li {
+  border-right: 1px solid rgba(118, 118, 118, 0.849);
+  padding-right: 8px;
+}
+
+.review_list li:last-child {
+  border-right: none;
+}
+
+.tour_itinerary .accordion .accordion-item button {
+  color: #161920;
+  font-weight: 700;
+  line-height: 1.3;
+  font-size: 1.25rem;
+}
