--- a/custom.css
+++ b/custom.css
@@ -880,7 +880,7 @@ strong {
 }
 
 .single_tour_booking .tour_times {
-  border-top: 1px solid #d6d6d6;
+  border-bottom: 1px solid #d6d6d6;
 }
 
 .single_tour_booking .tour_adults {
