--- a/custom.css
+++ b/custom.css
@@ -1408,18 +1408,18 @@ strong {
 }
 
 .apply-btn {
-  background-color: #0d6efd;
+  background-color: #3cb371;
   color: white;
   border: none;
   padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 5rem;
   font-weight: 500;
   width: 100%;
   margin-top: 15px;
 }
 
 .apply-btn:hover {
-  background-color: #0b5ed7;
+  background-color: #161922;
 }
 
 .age-title {
