--- a/custom.css
+++ b/custom.css
@@ -1496,8 +1496,6 @@ strong {
   cursor: pointer;
 }
 
-
-
 /* WooCommerce My Account Dashboard - Basic Styling */
 
 /* Container */
@@ -1505,7 +1503,7 @@ strong {
   background: #fff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
 
 /* Navigation Menu */
@@ -1535,9 +1533,10 @@ strong {
   border-radius: 6px;
   transition: all 0.2s ease-in-out;
   margin-bottom: 6px;
-
 }
-.woocommerce-account .woocommerce-MyAccount-navigation li a br{  display: none !important;}
+.woocommerce-account .woocommerce-MyAccount-navigation li a br {
+  display: none !important;
+}
 
 .woocommerce-account .woocommerce-MyAccount-navigation li a:hover {
   background: #3cb371;
@@ -1601,4 +1600,10 @@ strong {
 .flatpickr-day.endRange.nextMonthDay {
   background: #3cb371 !important;
   border-color: #3cb371 !important;
+}
+
+.tour_slide {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
